--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </nav>
     <aside> 
         <h3> Welcome! </h3>
-        <p> This is my e-portfolio site, published (privately) on Github, for free. I made this site using HTML and CSS, which I learned in two web development courses in SJSU's MLIS program. I wrote my HTML and CSS on Visual Studio Code, a free computer app. </p> <br>
+        <p> This is my e-portfolio site, published (privately) on Github, for free. I made this site using HTML, CSS, and Javascript, which I learned in three web development courses in SJSU's MLIS program. I wrote my HTML and CSS on Visual Studio Code, a free computer app. </p> <br>
         <h3> Navigation: </h3>
         <p> <span style="font-weight: bolder"> The navigation bar </span> at the top of the page contains links to each page of my portfolio. This bar is in the same place on each page. </p>
         <p> Within each page, there is a <span style="font-weight: bolder"> sidebar to the left </span> (same as this sidebar) that defines and outlines each competency. Click the quick links there to jump to a particular part of a competency. </p>
