--- a/comp_d.html
+++ b/comp_d.html
@@ -38,7 +38,9 @@
     </nav>
     <aside> 
         <h3> Definition: </h3>
-        <p> Apply the fundamental principles of planning, management, marketing, and advocacy. </p>
+        <p> Apply the fundamental principles of planning, management, marketing, and advocacy. </p> <br> 
+
+        <h3> Sections: </h3>
         <ul>
             <li>  <a href="#intro"> Introduction </a></li>
             <li>  <a href="#plan"> Planning </a></li>
