--- a/hacker.html
+++ b/hacker.html
@@ -10,7 +10,7 @@
   </head>
   <body class="hackerpage"> 
       <header class="hackerhead"> 
-        <h1 class="hackertitle"> Nice try! Try again >:-) </h1>
+        <h1 class="hackertitle"> Nice try, hacker! :-) </h1>
       </header>
         <img class="hackerpic" src="images/hacker.png" alt="hackerman!"> </img>
   </body>
