--- a/comp_d.html
+++ b/comp_d.html
@@ -17,7 +17,7 @@
     </header>
     <nav> 
         <ul class="navbar"> 
-        <li class="navitem"> <a href="index.html"> Main page </a></li>
+        <li class="navitem"> <a href="main.html"> Main page </a></li>
         <li class="navitem">  <a href="comp_a.html"> A </a></li>
         <li class="navitem">  <a href="comp_b.html"> B </a></li>
         <li class="navitem">  <a href="comp_c.html"> C </a></li>
@@ -32,7 +32,6 @@
         <li class="navitem">  <a href="comp_m.html"> M </a></li>
         <li class="navitem">  <a href="comp_n.html"> N </a></li>
         <li class="navitem">  <a href="comp_o.html"> O </a></li>
-        <li class="navitem">  <a href="evidence.html"> Evidence Gallery </a></li>
         <li class="navitem">  <a href="conclusion.html"> Conclusion </a></li>
     </ul>
     </nav>
