--- a/comp_a.html
+++ b/comp_a.html
@@ -17,7 +17,7 @@
     </header>
     <nav> 
         <ul class="navbar"> 
-        <li class="navitem"> <a href="index.html"> Main page </a></li>        
+        <li class="navitem"> <a href="main.html"> Main page </a></li>        
         <li class="navitem">  <a href="comp_a.html"> A </a></li>
         <li class="navitem">  <a href="comp_b.html"> B </a></li>
         <li class="navitem">  <a href="comp_c.html"> C </a></li>
