--- a/main.html
+++ b/main.html
@@ -15,6 +15,7 @@
     <h1> Sadie Davenport's E-Portfolio </h1>
     <h3> Spring 2023 </h3> 
     </header>
+    <div class="nav">
     <nav> 
         <ul class="navbar"> 
         <li class="navitem"> <a href="main.html"> Main page </a></li>
@@ -35,6 +36,8 @@
         <li class="navitem">  <a href="conclusion.html"> Conclusion </a></li>
     </ul>
     </nav>
+    </div>
+    
     <aside> 
         <h3> Welcome! </h3>
         <p> This is my e-portfolio site, published (privately) on Github, for free. I made this site using HTML, CSS, and Javascript, which I learned in three web development courses in SJSU's MLIS program. I wrote my HTML and CSS on Visual Studio Code, a free computer app. </p> <br>
