--- a/comp_d.html
+++ b/comp_d.html
@@ -15,26 +15,28 @@
     <h1> Competency D </h1>
     <h3> Sadie's E-Portfolio </h3>
     </header>
-    <nav> 
-        <ul class="navbar"> 
-        <li class="navitem"> <a href="main.html"> Main page </a></li>
-        <li class="navitem">  <a href="comp_a.html"> A </a></li>
-        <li class="navitem">  <a href="comp_b.html"> B </a></li>
-        <li class="navitem">  <a href="comp_c.html"> C </a></li>
-        <li class="navitem">  <a href="comp_d.html"> D </a></li>
-        <li class="navitem">  <a href="comp_e.html"> E </a></li>
-        <li class="navitem">  <a href="comp_f.html"> F </a></li>
-        <li class="navitem">  <a href="comp_g.html"> G </a></li>
-        <li class="navitem">  <a href="comp_h.html"> H </a></li>
-        <li class="navitem">  <a href="comp_j.html"> J </a></li>
-        <li class="navitem">  <a href="comp_k.html"> K </a></li>
-        <li class="navitem">  <a href="comp_l.html"> L </a></li>
-        <li class="navitem">  <a href="comp_m.html"> M </a></li>
-        <li class="navitem">  <a href="comp_n.html"> N </a></li>
-        <li class="navitem">  <a href="comp_o.html"> O </a></li>
-        <li class="navitem">  <a href="conclusion.html"> Conclusion </a></li>
-    </ul>
-    </nav>
+    <div class="nav">
+        <nav> 
+            <ul class="navbar"> 
+            <li class="navitem"> <a href="main.html"> Main page </a></li>
+            <li class="navitem">  <a href="comp_a.html"> A </a></li>
+            <li class="navitem">  <a href="comp_b.html"> B </a></li>
+            <li class="navitem">  <a href="comp_c.html"> C </a></li>
+            <li class="navitem">  <a href="comp_d.html"> D </a></li>
+            <li class="navitem">  <a href="comp_e.html"> E </a></li>
+            <li class="navitem">  <a href="comp_f.html"> F </a></li>
+            <li class="navitem">  <a href="comp_g.html"> G </a></li>
+            <li class="navitem">  <a href="comp_h.html"> H </a></li>
+            <li class="navitem">  <a href="comp_j.html"> J </a></li>
+            <li class="navitem">  <a href="comp_k.html"> K </a></li>
+            <li class="navitem">  <a href="comp_l.html"> L </a></li>
+            <li class="navitem">  <a href="comp_m.html"> M </a></li>
+            <li class="navitem">  <a href="comp_n.html"> N </a></li>
+            <li class="navitem">  <a href="comp_o.html"> O </a></li>
+            <li class="navitem">  <a href="conclusion.html"> Conclusion </a></li>
+        </ul>
+        </nav>
+        </div>
     <aside> 
         <h3> Definition: </h3>
         <p> Apply the fundamental principles of planning, management, marketing, and advocacy. </p> <br> 
