--- a/comp_d.html
+++ b/comp_d.html
@@ -49,7 +49,12 @@
             <li>  <a href="#evidence"> Evidence </a></li>
             <li>  <a href="#conclusion"> Conclusion </a></li>
             <li>  <a href="#references"> References </a></li>
-            <li>  <a href="#footer"> More competencies </a>
+        </ul> <br>
+
+        <h3> More information: </h3>
+        <ul>
+            <li>  <a href="main.html"> Main page </a></li>
+            <li>  <a href="#footer"> Contact information </a>
         </ul>
     </aside>
     <main> 
