--- a/comp_m.html
+++ b/comp_m.html
@@ -15,9 +15,10 @@
     <h1> Competency M </h1>
     <h3> Sadie's E-Portfolio </h3>
     </header>
-    <nav> 
+<nav> 
         <ul class="navbar"> 
         <li class="navitem"> <a href="main.html"> Main page </a></li>
+        <li class="navitem"> <a href="intro.html"> Introduction </a></li>
         <li class="navitem">  <a href="comp_a.html"> A </a></li>
         <li class="navitem">  <a href="comp_b.html"> B </a></li>
         <li class="navitem">  <a href="comp_c.html"> C </a></li>
