--- a/comp_d.html
+++ b/comp_d.html
@@ -37,7 +37,7 @@
         </ul>        
     </nav>
     <aside> 
-        <h3> Definition: </h3>
+        <h3> Comp D Definition: </h3>
         <p> Apply the fundamental principles of planning, management, marketing, and advocacy. </p> <br> 
 
         <h3> Sections: </h3>
