--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title> Main page </title>
-  <meta name="description" content="Website for the Warped Spacers, a writing group. This website provides updates, collects writing achievements, updates the member list, and showcases photos for the group's amazing members. This main page shows the most important information regarding the Spacers.">
+  <meta name="description" content="Website showcasing my progress, achievements, and lessons learned while in my MLIS program at San Jose State.">
   <link rel="stylesheet" media = "screen" href="css/style.css">
   <link rel="stylesheet" media = "print" href="css/print.css">
 
@@ -13,7 +13,7 @@
     <div class="content-wrapper">
     <header class="banner"> 
     <h1> Sadie Davenport's E-Portfolio </h1>
-    <h3> Spring 2023 </h3> 
+    <h3> Spring 2022 </h3> 
     </header>
         <nav> 
         <ul class="navbar"> 
