--- a/comp_m.html
+++ b/comp_m.html
@@ -50,7 +50,7 @@
 
         <h3> More information: </h3>
         <ul>
-            <li>  <a href="index.html"> Main page </a></li>
+            <li>  <a href="main.html"> Main page </a></li>
             <li>  <a href="#footer"> Contact information </a>
         </ul>
     </aside>
