--- a/conclusion.html
+++ b/conclusion.html
@@ -39,6 +39,10 @@
     <aside> 
         <h3> Definition: </h3>
         <p> Here are my final thoughts and reflections on my work in SJSU's MLIS program. </p> <br> 
+      <h3> More: </h3> 
+      <ul> 
+        <li>  <a href="main.html"> Main page </a></li>
+      </ul> 
     </aside>
     <main> 
     </main>
