--- a/comp_d.html
+++ b/comp_d.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title> Competency D </title>
   <meta name="description" content="Website showcasing my progress, achievements, and lessons learned while in my MLIS program at San Jose State."
+  <link rel="stylesheet" media = "screen" href="css/style.css">
   <link rel="stylesheet" media = "print" href="css/print.css">
 
 </head>
