--- a/comp_d.html
+++ b/comp_d.html
@@ -92,7 +92,7 @@
         <p> In case you can’t see the Instagram page, I have linked individual Instagram posts below (which are specifically related to marketing library services): </p>
 
         <div class="instagram posts"> 
-            <img src="images/instagram.lobster.png> Lobster food truck ad! </img> 
+            <img src="images/instagram.lobster.png"> Lobster food truck ad! </img> 
             <img src="images/instagram/lobster2.png"> Lobster food truck ad! </img> 
             <img src="images/instagram/resources.gif"> Library resources! </img>
             <img src="images/instagram/ws_list_squared.png"> List of library workshops! </img>
