--- a/comp_d.html
+++ b/comp_d.html
@@ -73,8 +73,8 @@
         <p> Within the CNU library, I work with several different marketing mediums: social media, paper marketing, and word-of-mouth. By combining multiple different types of marketing, I can ensure I reach as many students as possible. Only some follow our library Instagram page, but many more walk through the library and see the posters I put up. And when I talk to professors, and they promote library services in their classrooms (or even require students to attend for credit) then even more students are introduced to our library services. By doing all three, I can get a sense of what is most effective, how each marketing form is different, and what students respond to most. </p>
 
         <h3 id="advocacy"> Advocacy </h3>
-        <p> To show advocacy is to actively support an ongoing or completed service. When advocating for library services, it is important to do so in a helpful, open way that creates a direct benefit for the advocated service. In this way, advocacy can be similar to marketing. The major difference between the two is that marketing directly benefits the person doing the marketing, while advocacy is intended to benefit someone else, not the person marketing. </p>
-        <p> I learned how to advocate for my library's programs in order to instill in students and faculty a sense of consistency, dependency, and respect in regards to their library. </p>
+        <p> To show advocacy is to actively support an ongoing or completed service. When advocating for library services, it is important to do so in a helpful, open way that creates a direct benefit for the advocated service. In this way, advocacy can be similar to marketing. The major difference between the two is that marketing directly benefits the person doing the marketing, while advocacy is intended to benefit someone else. </p>
+        <p> I learned how to advocate for my library's programs in order to instill in students and faculty a sense of consistency, dependency, and respect in regards to their library. While working in a library, I befriended other libraries through social media, and advocated for them on my Instagram page. And since I work at a health sciences college, I find it extremely important to advocate for the health sciences and local health science communities, so that my students can see where their education can lead them. Advocacy is a great way to remind yourself why different library resources and external resources are beneficial to others, and why you are grateful for them. </p>
 
 
         <h3 id="evidence"> Evidence </h3> 
@@ -85,11 +85,11 @@
 
         <h4> Management: </h4>
         <img src="images/mail.png" style="width:150px; height:150px; display: block;"> <a href="includes/comp_d/mzuzufire_259.pdf"> Mzuzu University Library fire </a> </img> 
-        <p> Here is a I wrote in INFO 259, Preservation Management. In this paper, I discuss the Mzuzu University Library fire, and critique the management of the library's preservation and restoration process. As I do not have management experience yet, this assignment is the closest I have gotten to real management. I hope to fill this section with management experience, someday. </p>
+        <p> Here is a research paper I wrote in INFO 259, Preservation Management. In this paper, I discuss the Mzuzu University Library fire, and critique the management of the library's preservation and restoration process. As I do not have management experience yet, this assignment is the closest I have gotten to real management. I hope to fill this section with management experience, someday. </p>
 
         <h4> Marketing: </h4>
 
-        <img src="link.png"> <a href="https://www.instagram.com/cnulibrary/"> CNU Library Instagram page. </a>
+        <img src="images/link.png"> <a href="https://www.instagram.com/cnulibrary/"> CNU Library Instagram page. </a>
         <p> Here is the CNU library’s Instagram page. I created our account in January 2021, and have since made all of the posts on it since then. Our posts include promotions for on campus events, library events, library collection updates, database tutorials, local community showcasing, health heroes from history, important historical events in health science, and career planning resources. </p>
             
         <p> In case you can’t see the Instagram page, I have linked individual Instagram posts below (which are specifically related to marketing library services): </p>
