--- a/comp_d.html
+++ b/comp_d.html
@@ -89,7 +89,7 @@
 
         <h4> Marketing: </h4>
 
-        <img src="images/link.png"> <a href="https://www.instagram.com/cnulibrary/"> CNU Library Instagram page. </a>
+        <img src="images/link.png" style="width:150px; height:150px; display: block;"> <a href="https://www.instagram.com/cnulibrary/"> CNU Library Instagram page. </a> </img>
         <p> Here is the CNU library’s Instagram page. I created our account in January 2021, and have since made all of the posts on it since then. Our posts include promotions for on campus events, library events, library collection updates, database tutorials, local community showcasing, health heroes from history, important historical events in health science, and career planning resources. </p>
             
         <p> In case you can’t see the Instagram page, I have linked individual Instagram posts below (which are specifically related to marketing library services): </p>
