--- a/comp_d.html
+++ b/comp_d.html
@@ -73,8 +73,8 @@
         <p> Within the CNU library, I work with several different marketing mediums: social media, paper marketing, and word-of-mouth. By combining multiple different types of marketing, I can ensure I reach as many students as possible. Only some follow our library Instagram page, but many more walk through the library and see the posters I put up. And when I talk to professors, and they promote library services in their classrooms (or even require students to attend for credit) then even more students are introduced to our library services. By doing all three, I can get a sense of what is most effective, how each marketing form is different, and what students respond to most. </p>
 
         <h3 id="advocacy"> Advocacy </h3>
-        <p> To show advocacy is to actively support an ongoing or completed service. When advocating for library services, it is important to do so in a helpful, open way that creates a direct benefit for the advocated service. In this way, advocacy can be similar to marketing. The major difference between the two is that marketing directly benefits the person doing the marketing, while advocacy is intended to benefit someone else. </p>
-        <p> I learned how to advocate for my library's programs in order to instill in students and faculty a sense of consistency, dependency, and respect in regards to their library. While working in a library, I befriended other libraries through social media, and advocated for them on my Instagram page. And since I work at a health sciences college, I find it extremely important to advocate for the health sciences and local health science communities, so that my students can see where their education can lead them. Advocacy is a great way to remind yourself why different library resources and external resources are beneficial to others, and why you are grateful for them. </p>
+        <p> Librarian Amanda Jones briefly summarizes “advocacy” in her article: “Posting about your school’s library programming is not bragging–it’s advocating. We should all be proud of what we do and what we offer our students, and social media is one of the easiest ways to do this” <a href="#JonesA"> (Jones, p. 36).</a> After my courses and work, I agree with Jones’s assertion that showing advocacy is a way of actively supporting an ongoing or completed library service. In this way, advocacy can be similar to marketing. The major difference between the two is that marketing is intended to provide the marketer with a direct benefit, while advocacy is intended to benefit someone else. Both are useful in involving patrons in library services. </p> 
+        <p> I learned how to advocate for my library's programs in order to instill in students and faculty a sense of consistency, dependency, and respect in regards to their library. While working in a library, I befriended other libraries through social media, and advocated for them on my Instagram page. And since I work at a health sciences college, I find it extremely important to advocate for the health sciences and local health science communities, so that my students can see where their education can lead them. Advocacy is a great way to remind yourself why different library resources and external resources are beneficial to others, and why you are grateful for them. </p> 
 
 
         <h3 id="evidence"> Evidence </h3> 
@@ -162,6 +162,8 @@
 
         <h3 id="conclusion"> Conclusion </h3>
         <h3 id="references"> References </h3>
+
+        <p id="JonesA"> Jones, A. (2021). "Using social media to advocate for your school library." <i> Information Today. 41</i>(10), pp. 30-36. </p>
 
     </main>
     <footer id="footer"> 
