--- a/comp_d.html
+++ b/comp_d.html
@@ -164,8 +164,9 @@
         <h3 id="references"> References </h3>
 
         <p id="JonesA"> Jones, A. (2021). "Using social media to advocate for your school library." <i> Information Today. 41</i>(10), pp. 30-36. </p>
-        <p id="BreedingM"> Breeding, M. (2021). "Social media disconnect: Considering the role of social media in library marketing strategies." <i>Computers in Libraries. 41</i>(9), pp. 9-11.</p>
-    </main>
+        <p id="JonesM"> Jones, M. (2019). "Use of social media in delivery of feference services by librarians in FUTO Library." <i> Journal of Librarianship and Information Science. </i>(1), pp. 3-19.</p>
+
+</main>
     <footer id="footer"> 
         <h3> Contact me: </h3>
         <p> Feel free to email me at sadie.davenport@sjsu.edu </p>
