--- a/comp_d.html
+++ b/comp_d.html
@@ -84,22 +84,22 @@
         <h3 id="evidence"> Evidence </h3> 
         
         <h4> Planning: </h4> 
-        <img src="images/mail.png" style="width:150px; height:150px; display: block;"> <a href="includes/comp_d/alasc_oct.pdf"> ALASC October 2021 agenda. </a> </img>
+        <a href="includes/comp_d/alasc_oct.pdf"> <img src="images/mail.png" style="width:150px; height:150px; display: block;"> ALASC October 2021 agenda. </a> </img>
         <p> Here is one of our ALA student chapter monthly meeting agendas. It is an example of how our group discusses upcoming events and how we start the planning process early. </p> <br> 
 
         <h4> Management: </h4>
-        <img src="images/mail.png" id="mzuzu" style="width:150px; height:150px; display: block;"> <a href="includes/comp_d/mzuzufire_259.pdf"> Mzuzu University Library fire </a> </img> 
+        <a href="includes/comp_d/mzuzufire_259.pdf"> <img src="images/mail.png" id="mzuzu" style="width:150px; height:150px; display: block;"> Mzuzu University Library fire </a> </img> 
         <p> Here is a research paper I wrote in INFO 259, Preservation Management. In this paper, I discuss the Mzuzu University Library fire, and critique the management of the library's preservation and restoration process. As I do not have management experience yet, this assignment is the closest I have gotten to real management. I hope to fill this section with management experience, someday. </p>
 
         <h4> Marketing: </h4>
 
-        <img src="images/link.png" style="width:150px; height:150px; display: block;"> <a href="https://www.instagram.com/cnulibrary/"> CNU Library Instagram page. </a> </img>
+        <a href="https://www.instagram.com/cnulibrary/"> <img src="images/link.png" style="width:150px; height:150px; display: block;"> CNU Library Instagram page. </a> </img>
         <p> Here is the CNU library’s Instagram page. I created our account in January 2021, and have since made all of the posts on it since then. Our posts include promotions for on campus events, library events, library collection updates, database tutorials, local community showcasing, health heroes from history, important historical events in health science, and career planning resources. </p>
             
         <p> In case you can’t see the Instagram page, I have linked individual Instagram posts below (which are specifically related to marketing library services). Open the picture in a new tab to make it larger: </p>
 
         <div style="display: block; padding: 10px; text-align: center;"> 
-            <img src="images/wholeinsta.png" style="width: 400px; height: auto; ">  </img>
+            <img src="images/wholeinsta.png" style="width: 400px; height: auto; "> </img>
         </div>
         <h3> Instagram profile: @cnulibrary. </h3> 
         <p> This account has gained 112 followers over the past 13 months. </p>
