--- a/comp_d.html
+++ b/comp_d.html
@@ -84,11 +84,11 @@
         <h3 id="evidence"> Evidence </h3> 
         
         <h4> Planning: </h4> 
-        <a href="includes/comp_d/alasc_oct.pdf"> <img src="images/mail.png" style="width:150px; height:150px; display: block;"> ALASC October 2021 agenda. </a> </img>
+        <a href="includes/alasc_oct.pdf"> <img src="images/mail.png" style="width:150px; height:150px; display: block;"> ALASC October 2021 agenda. </a> </img>
         <p> Here is one of our ALA student chapter monthly meeting agendas. It is an example of how our group discusses upcoming events and how we start the planning process early. </p> <br> 
 
         <h4> Management: </h4>
-        <a href="includes/comp_d/mzuzufire_259.pdf"> <img src="images/mail.png" id="mzuzu" style="width:150px; height:150px; display: block;"> Mzuzu University Library fire </a> </img> 
+        <a href="includes/mzuzufire_259.pdf"> <img src="images/mail.png" id="mzuzu" style="width:150px; height:150px; display: block;"> Mzuzu University Library fire </a> </img> 
         <p> Here is a research paper I wrote in INFO 259, Preservation Management. In this paper, I discuss the Mzuzu University Library fire, and critique the management of the library's preservation and restoration process. As I do not have management experience yet, this assignment is the closest I have gotten to real management. I hope to fill this section with management experience, someday. </p>
 
         <h4> Marketing: </h4>
