--- a/comp_d.html
+++ b/comp_d.html
@@ -113,11 +113,10 @@
         <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQeG4KZu0rXzFFD112JgcX9PfL-HaSeTXRUQwhZzmmExoRJjEywvjiAkOv9iZQCUCZTh_HZsMvgt9pt/embed?start=false&loop=true&delayms=3000" frameborder="0" width="650" height="386" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
         <p> This slideshow contains images I designed on Canva, an online image editing & design website. Included in these images are Instagram posts and print images (noted) which I designed to market: 
             <ul> 
-                <li> Database contents </li>
-                <li> Library webpage updates </li>
-                <li> New (requested) textbooks </li>
-                <li> Workshops (a collaboration between the Media & Communications Studio and the CNU Library) </li>
-                <li> General library resources (print image) </li>
+                <li> New database content </li>
+                <li> New textbooks </li>
+                <li> Upcoming library workshops </li>
+                <li> General library resources </li>
                 <li> Events on campus </li> 
                 <li> Instagram page ad (print image) </li>
             </ul>
