--- a/comp_k.html
+++ b/comp_k.html
@@ -80,7 +80,7 @@
         <h3 id="evidence"> Evidence </h3>
 
         <h4> My first piece of evidence is a split-screen tutorial video and essay I created in INFO 254: Information Literacy. </h4>
-        <a href="https://ischoolsjsu.libwizard.com/id/84a98b2f87a389436241e155dc1f87c6"> <img src="images/quiz.png"> Zotero </img> /tutorial, through Libwizard </a>
+        <a href="https://ischoolsjsu.libwizard.com/id/84a98b2f87a389436241e155dc1f87c6"> <img src="images/quiz.png" style="width:150px; height:150px; display: block;"> Zotero </img> /tutorial, through Libwizard </a>
         <a href="includes/zoterotutorial.pdf"> <img src="images/mail.png" style="width:150px; height:150px; display: block;"> Accompanying paper on learning theories </a>
         <p> For INFO 254: Information Literacy, I worked in a two-person group to create this split-screen tutorial, an online, synchronous or asynchronous teaching tool. My role in this project was to create the initial and final surveys, as well as the infographics accompanying the questions that my partner wrote. My partner recorded the three tutorial videos and edited our questions. On my own, I wrote the accompanying essay on the learning theories which inspired me and my partner to create our tutorial. </p>
         <p> I included this group project in this competency to demonstrate my understanding of learning theories and how they inform library instruction. I phrased the questions and responses in this Zotero tutorial to lead participants to automatically, without intention, think critically about the information given to them. Phrases leading to critical thinking include: </p>
