--- a/comp_k.html
+++ b/comp_k.html
@@ -115,7 +115,7 @@
         <p> Arghode, V., Brieger, E. & McLean, G. (2017). Adult learning theories: Implications for online instruction. <i> European Journal of Training and Development 41</i>(7), 593-609. DOI: <a href="10.1108/EJTD-02-2017-0014"> 10.1108/EJTD-02-2017-0014 </a> </p>
         <p> Booth, C. (2011). <i> Reflective Teaching, Effective Learning: Instructional Literacy for Library Educators. </i> American Library Association. </p>
         <p> Reece, G. (2005). Critical thinking and cognitive transfer: Implications for the development of online information literacy materials. <i> Research Strategies 20</i>(4), 482-493. </p>
-        <p> Ward, C. & Wilkinson, A. (2012). <i> Basic Interpretation Learning System. </i> (Cahill, J. & Skinner, S. Eds.). California State Parks: Interpretation and Education Division. </p>
+        <p> Ward, C. & Wilkinson, A. (2012). <i> Basic Interpretation Learning System. </i> (Cahill, J. & Skinner, S. Eds.). California State Parks: Interpretation and Education Division. https://www.parks.ca.gov/?page_id=25530 </p>
     </main>
     <footer id="footer"> 
         <h3> Contact me: </h3>
